fixed overflowing modal text

--- a/react-app/src/components/postModal/modalPost.css
+++ b/react-app/src/components/postModal/modalPost.css
@@ -66,6 +66,7 @@ body{
 
 .modal-comments-container{
     height: 83.3%;
+    width: 100%;
 }
 
 .modal-add-comments-container{
@@ -160,7 +161,7 @@ body{
 
 .comment-content-text{
     font-size: 14px;
-    max-width: 400px;
+    max-width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -176,4 +177,9 @@ body{
 
 .comment-edit-btn{
     margin-right: 5px;
+}
+
+.comment-content-user-caption{
+    width: 100%;
+    overflow-wrap: break-word;
 }
